# -Nori---GPU-Ray-Tracing

./: CMakeLists.txt  CMakeLists2.txt  CMakeListscpu.txt  README.md
ext/nanogui/include/nanogui/: button.h  checkbox.h  colorwheel.h  combobox.h  formhelper.h  graph.h  imagepanel.h  imageview.h  label.h  layout.h  metal.h  popup.h  popupbutton.h  progressbar.h  python.h  renderpass.h  screen.h  slider.h  tabwidget.h  textarea.h  textbox.h  texture.h  toolbutton.h  vector.h  vscrollpanel.h  widget.h  window.h
ext/nanogui/src/: button.cpp  canvas.cpp  checkbox.cpp  colorpicker.cpp  colorwheel.cpp  combobox.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  label.cpp  layout.cpp  popup.cpp  popupbutton.cpp  progressbar.cpp  renderpass_gl.cpp  screen.cpp  slider.cpp  tabwidget.cpp  textarea.cpp  textbox.cpp  texture.cpp  texture_gl.cpp  vscrollpanel.cpp  widget.cpp  window.cpp
include/nori/: accelbvh.h  bboxgpu.h  bitmap.h  block.h  bsdf.h  camera.h  colorgpu.h  common.h  dpdfgpu.h  emitter.h  framegpu.h  gui.h  integrator.h  mesh.h  object.h  parser.h  proplist.h  raygpu.h  rfilter.h  sampler.h  scenegpu.h  timer.h  transform.h  vectorgpu.h  warpgpu.h
kernels/: accelbvh.cu  area.cu  diffuse.cu  independent.cu  integrators.cu  perspective.cu  scenes.cu  warp.cu
results/homework-2/: ajax-normals.exr  report.html
results/homework-3/: ajax-ao.exr  ajax-simple.exr  report.html
results/homework-4/: logo-dielectric.exr  logo-diffuse.exr  report.html
results/homework-5/: ajax-smooth.exr  report.html  table_ems.exr  table_mats.exr  veach_mats.exr
results/project/: report.html
results/project-proposal/: ibh1.html  proposal.html
results/project-proposal/ibh1_files/: app.html  faviconV2(1)  images  images(1)  images(10)  images(11)  images(12)  images(13)  images(14)  images(15)  images(16)  images(17)  images(18)  images(2)  images(20)  images(22)  images(23)  images(24)  images(25)  images(26)  images(27)  images(28)  images(29)  images(3)  images(30)  images(31)  images(33)  images(34)  images(35)  images(37)  images(38)  images(4)  images(40)  images(41)  images(42)  images(43)  images(44)  images(45)  images(46)  images(47)  (+21 more)
scenes/: test.xml
scenes/pa1/: bunny.exr  bunny.xml
scenes/pa2/: ajax-normals.exr
scenes/pa3/: ajax-simple.exr
scenes/pa4/cbox/: cbox-distributed.exr
scenes/pa5/ajax/: ajax-rough.exr
scenes/pa5/table/: table_mis.exr
src/: bitmap.cpp  block.cpp  camera.cpp  common.cpp  gui.cpp  main.cpp  meshes.cpp  object.cpp  parser.cpp  proplist.cpp  rfilters.cpp
valgrind-dbg/: valgrind-out.txt  valgrind-out2.txt
